fix name box clipping

--- a/styles/global.css
+++ b/styles/global.css
@@ -107,7 +107,6 @@ a:hover {
 .form-label-group > label {
   position: absolute;
   top: 0;
-  left: 0;
   display: block;
   width: 100%;
   margin-bottom: 0; /* Override default `<label>` margin */
